Updated hugo to latest version and author

--- a/themes/LoveIt/i18n/it.toml
+++ b/themes/LoveIt/i18n/it.toml
@@ -123,7 +123,7 @@ other = "{{ .Count }} minuti"
 other = "visualizzazioni"
 
 [author]
-other = "Autore"
+other = "Shiva"
 
 [updatedOnDate]
 other = "Aggiornato il {{ .Date }}"
