--- a/themes/LoveIt/i18n/sr.toml
+++ b/themes/LoveIt/i18n/sr.toml
@@ -120,7 +120,9 @@ other = "{{ .Count }} минута"
 other = "прегледа"
 
 [author]
-other = "Аутор"
+  name = "Shiva"
+  email = "i@shiva.dev"
+  link = "https://shiva.dev"
 
 [updatedOnDate]
 other = "Ажурирано {{ .Date }}"
