--- a/themes/LoveIt/i18n/en.toml
+++ b/themes/LoveIt/i18n/en.toml
@@ -119,7 +119,7 @@ other = "{{ .Count }} minutes"
 other = "views"
 
 [author]
-other = "Author"
+other = "Shiva"
 
 [updatedOnDate]
 other = "Updated on {{ .Date }}"
